[gd_scene load_steps=5 format=3 uid="uid://dule5eggsxyvo"]

[ext_resource type="Script" uid="uid://con3stiif7a6" path="res://scenes/ui/volume_menu.gd" id="1_ghd78"]
[ext_resource type="Texture2D" uid="uid://db0iojmrs813b" path="res://assets/ui/temp_menu_background.jpg" id="2_nay2i"]
[ext_resource type="Texture2D" uid="uid://bntl7fv41g75j" path="res://assets/ui/menu_button.tres" id="5_k14j1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ny1bo"]
texture = ExtResource("5_k14j1")

[node name="VolumeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghd78")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nay2i")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -156.0
offset_right = 208.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 23
alignment = 1

[node name="VolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "Master"

[node name="Master" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.75

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "Music"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.75

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "SFX"

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.75

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_ny1bo")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
